[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = ["samsja <sami.jaghouar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jaxtyping = ">=0.2.0"
torch = "^2.1.1"
torchinfo = "^1.8.0"

[tool.poetry.dev-dependencies]
jupyterlab = ">=4.0.6"
black = ">=23.9.1"
ruff = ">=0.0.292"
jupyterlab-code-formatter = ">=2.2.1"
isort = ">=5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
